getLast for arraylist was added in java 21